--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <p>There is almost no chance you do the "noclip" and end up there, but if that ever happens, help the society by exploring the most of them so that if you leave the backrooms alive, you can give us as many facts about them as possible.</p>
             <p>If you want to explore other parts of the planet Earth, go on...</p>
             <h2>Bored of the backrooms (somehow)? Explore the frontrooms!</h2>
-            <a href="#">HERE!</a>
+            <a href="https://explorefrontrooms.github.io/index.html">HERE!</a>
         </div>
     </center>
 </body>
