--- a/levels.html
+++ b/levels.html
@@ -17,7 +17,7 @@
                 This website is still exploring the web for as many information about other levels. Until we finish that, you could check some other backrooms websites!
             </p>
             <h2>Bored of the backrooms (somehow)? Explore the frontrooms!</h2>
-            <a href="#">HERE!</a>
+            <a href="https://explorefrontrooms.github.io/index.html">HERE!</a>
         </div>
     </center>
 </body>
