--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
             <a href="level_6.html">level_6</a>
             <a href="level_7.html">level_7</a>
             <a href="level_8.html">level_8</a>
-            <a href="level_9.html">level_9</a>
-            <a href="level_3999.html">level_3999</a>
-            <a href="level_-18.html">level_-18</a>
-            <a href="level_-33.html">level_-33</a>
-            <a href="level_48.html">level_48</a>
-            <a href="level_Crimson_Forest.html">Crimson_Forest</a>
-            <a href="level_6.1.html">level_6.1</a>
-            <a href="level_11.html">level_11</a>
-            <a href="level_The_End.html">The_End</a>
-            <a href="level_188.html">level_188</a>
-            <a href="level_Fun.html">level_Fun</a>
-            <a href="level_42.html">level_42</a>
-            <a href="levelone.html">level_256</a>
-            <a href="levelone.html">The_Blackout</a>
-            <a href="levelone.html">level_-81</a>
-            <a href="levelone.html">level_1.5</a>
-            <a href="levelone.html">level_!</a>
-            <a href="levelone.html">level_9223372036854775807</a>
-            <a href="levelone.html">TH3_SH4DY_GR3Y</a>
+            <a href="inwork.html">level_9</a>
+            <a href="inwork.html">level_3999</a>
+            <a href="inwork.html">level_-18</a>
+            <a href="inwork.html">level_-33</a>
+            <a href="inwork.html">level_48</a>
+            <a href="inwork.html">Crimson_Forest</a>
+            <a href="inwork.html">level_6.1</a>
+            <a href="inwork.html">level_11</a>
+            <a href="inwork.html">The_End</a>
+            <a href="inwork.html">level_188</a>
+            <a href="inwork.html">level_Fun</a>
+            <a href="inwork.html">level_42</a>
+            <a href="inwork.html">level_256</a>
+            <a href="inwork.html">The_Blackout</a>
+            <a href="inwork.html">level_-81</a>
+            <a href="inwork.html">level_1.5</a>
+            <a href="inwork.html">level_!</a>
+            <a href="inwork.html">level_9223372036854775807</a>
+            <a href="inwork.html">TH3_SH4DY_GR3Y</a>
             <a href="levels.html">other levels</a>
             <p><b>What are the backrooms?</b></p>
             <img src="https://assets.indreams.me/docs/images/uploads/backroomsvr.jfif" />
