--- a/inwork.html
+++ b/inwork.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <link rel="stylesheet" href="styles.css">
-    <title>Level_6 - Frontrooms</title>
+    <title>In Work - Frontrooms</title>
     <link rel="icon" type="image/x-icon" href="icon.ico">
 </head>
 <body>
     <center>
         <div id="title">
-            <h1>Level_6 of the backrooms</h1>
+            <h1>#</h1>
         </div>
         <div id="content">
             <a href="index.html">home</a>
