--- a/levels.html
+++ b/levels.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="styles.css">
-    <title>Backrooms</title>
+    <title>Other levels - Backrooms</title>
     <link rel="icon" type="image/x-icon" href="icon.ico">
 </head>
 <body>
