--- a/level_1.html
+++ b/level_1.html
@@ -2,17 +2,17 @@
 <html>
 <head>
     <link rel="stylesheet" href="styles.css">
-    <title>Level one - Frontrooms</title>
+    <title>Level_1 - Frontrooms</title>
     <link rel="icon" type="image/x-icon" href="icon.ico">
 </head>
 <body>
     <center>
         <div id="title">
-            <h1>Level_1 of the frontrooms</h1>
+            <h1>Level_1 of the backrooms</h1>
         </div>
         <div id="content">
             <a href="index.html">home</a>
-            <h2 style="font-size: 100px">IN WORK</h2>
+            <h1 style="font-size: 100px">IN WORK</h1>
             <h2>Bored of the frontrooms? Explore the backrooms!</h2>
             <a href="#">HERE!</a>
         </div>
